doc(modifying-readme): Finally completed the README file.